--- a/html/calendar.html
+++ b/html/calendar.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="../css/calendar.css">
 </head>
 <body>
-<input type="text" data-type="date" id="date-input" />
-<div id="material-header-holder" style="display:none">
+<div id="destDiv"/>
+<div id="material-header-holder" >
     <div class="ui-datepicker-material-header">
         <div class="ui-datepicker-material-day">
         </div>
